--- a/app/client/style.css
+++ b/app/client/style.css
@@ -3,15 +3,20 @@
 
 /* Set up some CSS variables to theme the application. */
 :root {
-  --matr-navbar-bg: #ECECEC;
-  --matr-navbar-bg-rgb: 236, 236, 236;
+  --matr-navbar-bg: darkgreen;
+  --matr-navbar-bg-rgb: 0, 0, 139;
+  --matr-navbar-text-color: white;
+  --matr-navbar-highlight-text: yellow;
 }
 
 /* Change bootstrap variable values.
  See https://getbootstrap.com/docs/5.2/customize/css-variables/
  */
 body {
-  --bs-light-rgb: var(--matr-navbar-bg-rgb);
+  --bs-dark: var(--matr-navbar-bg);
+  --bs-dark-rgb: var(--matr-navbar-bg-rgb);
+  background-size: cover;
+  background: url("https://manoa.hawaii.edu/news/attachments/img11541_11869l.jpg");
 }
 
 /* Set the alert background on the signin and signup pages. */
