--- a/app/client/style.css
+++ b/app/client/style.css
@@ -5,8 +5,8 @@
 :root {
   --matr-navbar-bg: darkgreen;
   --matr-navbar-bg-rgb: 0, 0, 139;
-  --matr-navbar-text-color: white;
-  --matr-navbar-highlight-text: yellow;
+  --matr-navbar-text-color: green;
+  --matr-navbar-highlight-text: blue;
 }
 
 /* Change bootstrap variable values.
@@ -17,6 +17,14 @@ body {
   --bs-dark-rgb: var(--matr-navbar-bg-rgb);
   background-size: cover;
   background: url("https://manoa.hawaii.edu/news/attachments/img11541_11869l.jpg");
+}
+
+body .navbar {
+  --bs-navbar-active-color: var(--matr-navbar-highlight-text);
+  --bs-navbar-brand-color: var(--matr-navbar-text-color);
+  --bs-navbar-brand-hover-color: var(--matr-navbar-highlight-text);
+  --bs-navbar-color: var(--matr-navbar-text-color);
+  --bs-navbar-hover-color: var(--matr-navbar-highlight-text);
 }
 
 /* Set the alert background on the signin and signup pages. */
@@ -30,4 +38,8 @@ body {
   color: var(--bs-dark);
   padding-top: 10px;
   padding-bottom: 20px;
+}
+
+footer, footer a {
+  color: var(--matr-navbar-text-color);
 }
