--- a/app/client/style.css
+++ b/app/client/style.css
@@ -66,3 +66,9 @@ footer, footer a {
   cursor: pointer;
   box-shadow: 0px 2px 2px lightgray;
 }
+
+#homeButton {
+  cursor: pointer;
+  background-color: green;
+  color: white;
+}
