--- a/app/client/style.css
+++ b/app/client/style.css
@@ -72,3 +72,19 @@ footer, footer a {
   background-color: green;
   color: white;
 }
+
+.category-img {
+  width: 200px;
+  height: 200px;
+  border: 5px solid black;
+}
+
+.category-text {
+  color: white;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.category-link {
+  text-decoration: none;
+}
